[gd_scene load_steps=22 format=3 uid="uid://gyxdv70vg36f"]

[ext_resource type="Script" path="res://Character/hero.gd" id="1_c1q3y"]
[ext_resource type="Texture2D" uid="uid://d21keupcduai8" path="res://Assets/hero.png" id="2_hl1kh"]
[ext_resource type="Texture2D" uid="uid://da0rllr26igf4" path="res://Assets/herowalk_0001.png" id="3_32jjw"]
[ext_resource type="Texture2D" uid="uid://dnhmgwwfsfahb" path="res://Assets/herowalk_0002.png" id="4_68q0l"]
[ext_resource type="Texture2D" uid="uid://b6i0ngiltxqv0" path="res://Assets/herowalk_0003.png" id="5_dh52u"]
[ext_resource type="Texture2D" uid="uid://dvsulfh0kmqhs" path="res://Assets/herowalk_0004.png" id="6_ujena"]
[ext_resource type="Texture2D" uid="uid://bs1edav5exmbn" path="res://Assets/herowalk_0005.png" id="7_4538c"]
[ext_resource type="Texture2D" uid="uid://crlw1hvfxlp06" path="res://Assets/herowalk_0006.png" id="8_psir8"]
[ext_resource type="PackedScene" uid="uid://fxeytxo4oi2q" path="res://Character/tool_bar.tscn" id="9_42gv3"]
[ext_resource type="PackedScene" uid="uid://p26p8upa05vb" path="res://Items/inv.tscn" id="10_o2wvs"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xl1et"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hl1kh")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_32jjw")
}, {
"duration": 1.0,
"texture": ExtResource("4_68q0l")
}, {
"duration": 1.0,
"texture": ExtResource("5_dh52u")
}, {
"duration": 1.0,
"texture": ExtResource("6_ujena")
}, {
"duration": 1.0,
"texture": ExtResource("7_4538c")
}, {
"duration": 1.0,
"texture": ExtResource("8_psir8")
}],
"loop": true,
"name": &"walk",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vlbou"]
radius = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e6fxo"]
bg_color = Color(0.0142752, 0.0142752, 0.0142752, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fcgsj"]
bg_color = Color(0.988235, 0.0156863, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gbkme"]
bg_color = Color(0.00820202, 0.00820203, 0.00820202, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m1syw"]
bg_color = Color(0.0313726, 0.0313726, 0.784314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jhqkh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5q10g"]
bg_color = Color(0.292616, 0.000789729, 0.707507, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vnuy6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l8nyw"]
bg_color = Color(0, 0.701961, 0.0235294, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ttj5j"]

[node name="Hero" type="CharacterBody2D"]
position = Vector2(2, -1)
collision_layer = 2
collision_mask = 5
motion_mode = 1
script = ExtResource("1_c1q3y")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_xl1et")
animation = &"idle"
autoplay = "walk"
frame_progress = 0.141578

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_vlbou")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-1, 0)
zoom = Vector2(2, 2)
limit_left = -56
limit_top = -56
limit_right = 2568
limit_bottom = 1544

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 2
offset_left = -107.995
offset_top = 169.792
offset_right = -103.995
offset_bottom = 196.792
rotation = -1.56981
scale = Vector2(1, 3.92019)
theme_override_styles/background = SubResource("StyleBoxFlat_e6fxo")
theme_override_styles/fill = SubResource("StyleBoxFlat_fcgsj")
fill_mode = 2
show_percentage = false

[node name="ProgressBar2" type="ProgressBar" parent="."]
z_index = 2
offset_left = -1.99526
offset_top = 169.792
offset_right = 2.00474
offset_bottom = 196.792
rotation = -1.57011
scale = Vector2(1, 3.86182)
theme_override_styles/background = SubResource("StyleBoxFlat_gbkme")
theme_override_styles/fill = SubResource("StyleBoxFlat_m1syw")
fill_mode = 2
show_percentage = false

[node name="ProgressBar3" type="ProgressBar" parent="."]
z_index = 2
offset_left = -107.995
offset_top = 165.792
offset_right = -103.995
offset_bottom = 192.792
rotation = -1.56988
scale = Vector2(0.948065, 7.79642)
theme_override_styles/background = SubResource("StyleBoxFlat_jhqkh")
theme_override_styles/fill = SubResource("StyleBoxFlat_5q10g")
fill_mode = 2
show_percentage = false

[node name="ProgressBar4" type="ProgressBar" parent="."]
z_index = 2
offset_left = -107.995
offset_top = 173.792
offset_right = -103.995
offset_bottom = 200.792
rotation = -1.57198
scale = Vector2(1, 7.79768)
theme_override_styles/background = SubResource("StyleBoxFlat_vnuy6")
theme_override_styles/fill = SubResource("StyleBoxFlat_l8nyw")
fill_mode = 2
show_percentage = false

[node name="MeleeRange" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeleeRange"]
scale = Vector2(-3.39818, -3.29067)
shape = SubResource("CircleShape2D_ttj5j")

[node name="Inv" parent="." instance=ExtResource("10_o2wvs")]
offset_left = 132.0
offset_top = -80.0
offset_right = 132.0
offset_bottom = -80.0
scale = Vector2(0.484701, 0.489641)

[node name="ToolBar" parent="." instance=ExtResource("9_42gv3")]
offset_left = -134.0
offset_top = 181.0
offset_right = -134.0
offset_bottom = 181.0
scale = Vector2(0.629397, 0.676503)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="body_entered" from="MeleeRange" to="." method="_on_melee_range_body_entered"]
[connection signal="body_exited" from="MeleeRange" to="." method="_on_melee_range_body_exited"]
